templates/brain/prod/patch-oauth2-proxy-brain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy-brain
spec:
  template:
    spec:
      containers:
        - name: oauth2-proxy
