templates/brain/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workspace-ingress-brain
  labels:
    app: brain
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - brain.${PROD_DOMAIN}
      secretName: ${TLS_SECRET_NAME}
  rules:
    - host: brain.${PROD_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: oauth2-proxy-brain
                port:
                  number: 4180
